fixing spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6521,9 +6521,7 @@ body.home-page main {
     justify-content: center;
   }
 
-  .strains-content-wrapper-right {
-    padding-left: 40px;
-  }
+ 
 
   .strains-main-heading-text {
     font-size: 2.5rem;
@@ -8237,8 +8235,8 @@ body.home-page main {
   }
 
   .vcn-acidity-main-heading {
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 32px;
+    font-weight: 400;
     color: var(--vcn-footer);
     margin-bottom: 20px;
   }
@@ -8274,8 +8272,8 @@ body.home-page main {
   }
 
   .vcn-acidity-bundle-title {
-    font-size: 1.8rem;
-    font-weight: 700;
+    font-size: 32px;
+    font-weight: 400;
     color: var(--vcn-footer);
     margin-bottom: 35px;
   }
@@ -13677,4 +13675,16 @@ body.home-page main {
   .strains-info-main-section{
       padding-left:25px !important;
     }
+}
+
+/* adjustments sm-pr-0 */
+/* mobile setup responsive */
+@media (max-width: 676px) {
+ .sm-pr-0{
+  padding-top: 20px !important;
+  padding-right: 0 !important;  
+ }
+ .btn-write-review{
+  margin: 0 auto 24px !important;
+ }
 }
